# ChangeLog for app-admin/syslog-ng
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.321 2012/03/04 22:16:44 mr_bones_ Exp $

  04 Mar 2012; Michael Sterrett <mr_bones_@gentoo.org> syslog-ng-3.3.4.ebuild:
  work around underlinking with gold linker (bug #405381)

  03 Mar 2012; Brent Baude <ranger@gentoo.org> syslog-ng-3.2.5.ebuild:
  Marking syslog-ng-3.2.5 ppc64 for bug 394621

  06 Feb 2012; Brent Baude <ranger@gentoo.org> syslog-ng-3.2.5.ebuild:
  Marking syslog-ng-3.2.5 ppc for bug 394621

*syslog-ng-3.3.4 (21 Jan 2012)

  21 Jan 2012; Michael Sterrett <mr_bones_@gentoo.org> -syslog-ng-3.3.1.ebuild,
  -files/syslog-ng-3.3.1-filter.patch, -files/syslog-ng-3.3.1-ssl.patch,
  -syslog-ng-3.3.3.ebuild, +syslog-ng-3.3.4.ebuild,
  +files/syslog-ng-3.3.4-compile.patch:
  masked 3.3 series version bump

  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> syslog-ng-3.2.5.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #394621

  16 Dec 2011; Jeroen Roovers <jer@gentoo.org> syslog-ng-3.2.5.ebuild:
  Stable for HPPA (bug #394621).

  15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> syslog-ng-3.2.5.ebuild:
  Stable for X86/AMD64, wrt bug #394621

  14 Dec 2011; Michael Sterrett <mr_bones_@gentoo.org> syslog-ng-3.2.5.ebuild:
  remove upstream-unsupported static linking (bug #394703)

  04 Dec 2011; Sven Wegener <swegener@gentoo.org> files/syslog-ng.rc6.3:
  move reload to extra_started_commands in 3.2 init script

*syslog-ng-3.3.3 (28 Nov 2011)

  28 Nov 2011; Michael Sterrett <mr_bones_@gentoo.org> +syslog-ng-3.3.3.ebuild:
  masked 3.3 series version bump

  09 Nov 2011; Michael Sterrett <mr_bones_@gentoo.org> syslog-ng-3.3.1.ebuild:
  add a note about the upstream documentation

*syslog-ng-3.2.5 (07 Nov 2011)

  07 Nov 2011; Michael Sterrett <mr_bones_@gentoo.org> +syslog-ng-3.2.5.ebuild:
  3.2 series version bump
